# LispSSSCLI

./: .gitmodules  CMakeLists.txt  FindLibFFI.cmake  LispSSSCLI  README.md
src/: main.cpp
